static/sass/_theme.scss
/* ... */
@media (min-width: 43.75em) {
	.posts-indent,
	.posts-paragraph {
		padding-right: 55px;
	}
}
@media (min-width: 50em) and (max-width: config.$oneColLayoutMaxWidth) {
	.posts-paragraph {
		max-width: 100%;
	}
}

/* About Me Link Block */
.about {
	margin: 0 0 5em;
	padding: 1em 1em;
	background-color: #f4f4f4;
	border: 1px solid #ccc;
	border-radius: .35em;
	font-size: 0.875em; /* 14px /16 */
	@include mixins.unhyphenate;
}
.tmpl-page .about {
	border-radius: 0 0 .35em .35em;
}
@media (min-width: 40.625em) { /* 650px */
	.tmpl-page .about {
		margin-left: -1rem;
		margin-right: -1rem;
	}
}
.about a {
	word-break: keep-all;
}
.about p {
	margin-top: 0;
}
.about ul:last-child {
	margin-bottom: 0;
}

/* Footer */
.footer {
	margin-top: clamp(2em, 15vh, 4em);
	margin-bottom: 1em;
	font-size: 1rem;
	line-height: 130%;
	font-style: italic;
}
.footer-badge {
	vertical-align: middle;
	border-radius: .5em;
	image-rendering: pixelated;
}
.footer strong {
	font-style: normal;
	font-size: 150%;
	vertical-align: text-bottom;
}

/* Tags */
.tags {
	display: inline-flex;
	flex-wrap: wrap;
	align-items: center;
	gap: .25em;
	vertical-align: text-bottom;
}
.tags,
.tag-inline {
	font-family: system-ui, sans-serif;
	font-weight: 800;
}
.tags:empty {
	display: none;
}
.tag-inline,
.tags .tag {
	display: inline-block;
	font-size: 0.6315789473684em; /* 12px /19 */
	height: auto;
	font-style: normal;
	color: #666;
	padding: .25em .5em;
	text-decoration: none;
	border-radius: var(--z-border-radius-2);
	line-height: 1.25;
}
.tag-inline:where(:has(svg):not(.tag-borderless)),
.tags .tag:where(:has(svg):not(.tag-borderless)) {
	--shadow-color: rgba(0,0,0,.15);
	display: inline-flex;
	align-items: center;
	background-color: #f4f4f4;
	color: #504f4f;
	border: 1px solid var(--shadow-color);
	line-height: 1.75;
}
.tags .tag:is(.video, .audio) {
	--shadow-color: rgba(0,0,0,.4);
}
.tags .tag:has(svg [href="#fas-fa-fire-flame-curved"]) {
	--shadow-color: rgba(255, 153, 0, .5);
	background-color: #fff8ee;
	color: #774700;
}
.tags .tag:has(svg [href="#fas-fa-calculator"]) {
	--shadow-color: rgba(249, 71, 192, .5);
	background-color: #ffeeee;
	color: #c32791;
}
.tag-inline:has(svg) svg,
.tags .tag:has(svg) svg {
	margin-inline-start: 0;
}
.tags .tag-borderless:has(svg) svg {
	margin-inline: 0;
}
a[href].tag-inline:not(.tag-borderless),
.tags a[href].tag:not(.tag-borderless) {
	border: 1px solid rgba(0, 0, 0, .08);
}

/* Social proof pill */
.tags .tag-social {
	padding: 0;

	&:empty {
		display: none;
	}
}
@media (max-width: 44.9375em) { /* 719px */
	.posts .tags .tag-social {
		display: none !important;
	}
}
.tags .tag-social:has(svg) {
	border-width: 0;
}
.tags .tag-social > * {
	display: inline-flex;
	min-height: 2.272727272727em; /* 25px /11 */
	justify-content: center;
	align-items: center;
	gap: 0;
	padding: .25em 0.5em;
	border: 1px solid;
	border-radius: 0;
}
.tags .tag-social > :first-child {
	border-top-left-radius: .5em;
	border-bottom-left-radius: .5em;
}
.tags .tag-social > :last-child {
	border-top-right-radius: .5em;
	border-bottom-right-radius: .5em;
}
.tags .tag-social > :not(:first-child) {
	border-inline-start: none;
}
.tags .tag-social > :not(:last-child) {
	border-inline-end: none;
}
.tag-social--boost {
	color: #006000;
	background-color: #e4f7e4;
}
.tag-social--like {
	color: #880808;
	background-color: #ffeded;
}
.tag-social--view {
	color: #434574;
	background-color: #e4e4f1;
}
.tag-social--reply {
	color: #8c890f;
	background-color: #edf1e4;
}
/* End social proof pill */

.tag-inline {
	font-size: .75rem;
	margin-inline: .5em;
}
.tags .tag:visited {
	color: #666;
	text-decoration: none;
}
.tags .tag-borderless,
.tags .tag-borderless:visited {
	border-color: transparent;
	text-decoration: underline;
}
.tag-inline.tag-cased,
.tags .tag-cased {
	text-transform: none;
}
.tags .tag-event {
	text-decoration: none;
	text-transform: none;
}
.tags .tag.active,
.tags .tag.active:visited,
.tags a[href].tag:hover,
.tags a[href].tag:visited:hover {
	background-color: #444;
	color: #fff;
	border-color: #444;
}

.tags .tag.tweet {
	color: #00c9ff;
}
.tags .highlight-label {
	@include mixins.a11y-only;
}
.tags .tag-emoji {
	padding: 0;
	font-size: 1em;
}

.tags.tags-rail {
	display: flex;
	flex-wrap: wrap;
	gap: 0.25em;
	white-space: normal;
}
.tags.tags-rail .tag {
	margin-right: 0;
	margin-left: 1px;

	@media (max-width: config.$oneColLayoutMaxWidth) {
		padding-left: 3px;
		padding-right: 3px;
		margin-left: 0;
	}
}

.tags-rail-links {
	font-size: 1em; /* 16px /16 */
	font-family: system-ui, sans-serif;
	font-weight: 600;
}
.tags-rail-links a[href] {
	display: inline-flex;
	align-items: center;
	padding: .4em;
	border-radius: .25em;
}
.tags-rail-links a[href]:has(svg) {
	padding-inline-start: .25em;
}
.tags-rail-links a[href].active {
	color: #f4f4f4;
	background-color: #39542f;
}
@media (max-width: config.$oneColLayoutMaxWidth) {
	.tags-rail-links {
		display: flex;
		flex-wrap: wrap;
		gap: .25em .5em;
		text-transform: uppercase;
	}
	.tags-rail-links .z-icon {
		width: 1em;
		height: 1em;
	}
}
@media (min-width: config.$twoColLayoutMinWidth) {
	.tags-rail-links {
		font-size: 1.25em; /* 20px /16 */
		margin-block: 1.5em;
		margin-inline-start: -.4em;
		font-weight: 400;
	}
	.tags-rail-links a[href].active {
		font-weight: 650;
	}
	.tags-rail-links a[href]:not(:has(.z-icon)) {
		margin-left: 1.7em;
	}
}
/* ... */

